styles: adding floating label css for custom select and textarea

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -125,6 +125,10 @@ blockquote_theme_demo__xlight:
   path: >-
     src/_patterns/02-components/bolt-blockquote/demo/theming/01-blockquote-theme-demo--xlight.twig
   namespace: '@bolt/01-blockquote-theme-demo--xlight.twig'
+bolt_campaign_landing:
+  filename: bolt-campaign-landing.twig
+  path: src/_patterns/04-pages/bolt-sandbox/bolt-campaign-landing.twig
+  namespace: '@bolt/bolt-campaign-landing.twig'
 bolt_form:
   filename: bolt-form.twig
   path: src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
@@ -169,6 +173,10 @@ card_kitchen_sink:
   filename: card-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
   namespace: '@bolt/card-kitchen-sink.twig'
+card_simple:
+  filename: card-simple.twig
+  path: src/_patterns/02-components/bolt-card/src/card-simple.twig
+  namespace: '@bolt/card-simple.twig'
 card_w_teaser:
   filename: card-w-teaser.twig
   path: src/_patterns/02-components/bolt-card/src/card-w-teaser.twig
@@ -254,6 +262,88 @@ flag:
   filename: flag.twig
   path: src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.twig
   namespace: '@bolt/flag.twig'
+form:
+  filename: form.twig
+  path: src/_patterns/02-components/bolt-forms/src/form.twig
+  namespace: '@bolt/form.twig'
+form_button:
+  filename: form-button.twig
+  path: src/_patterns/02-components/bolt-forms/src/inputs/form-button.twig
+  namespace: '@bolt/form-button.twig'
+form_checkboxes:
+  filename: form-checkboxes.twig
+  path: src/_patterns/02-components/bolt-forms/src/inputs/form-checkboxes.twig
+  namespace: '@bolt/form-checkboxes.twig'
+form_demo_campaign_landing:
+  filename: form-demo-campaign-landing.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/forms/form-demo-campaign-landing.twig
+  namespace: '@bolt/form-demo-campaign-landing.twig'
+form_demo_partner_faceted_search:
+  filename: form-demo-partner-faceted-search.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/forms/form-demo-partner-faceted-search.twig
+  namespace: '@bolt/form-demo-partner-faceted-search.twig'
+form_element:
+  filename: form-element.twig
+  path: src/_patterns/02-components/bolt-forms/src/elements/form-element.twig
+  namespace: '@bolt/form-element.twig'
+form_element_demo_checkbox:
+  filename: form-element-demo-checkbox.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-checkbox.twig
+  namespace: '@bolt/form-element-demo-checkbox.twig'
+form_element_demo_checkboxes:
+  filename: form-element-demo-checkboxes.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-checkboxes.twig
+  namespace: '@bolt/form-element-demo-checkboxes.twig'
+form_element_demo_input_element:
+  filename: form-element-demo-input-element.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-input-element.twig
+  namespace: '@bolt/form-element-demo-input-element.twig'
+form_element_demo_input_submit:
+  filename: form-element-demo-input-submit.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-input-submit.twig
+  namespace: '@bolt/form-element-demo-input-submit.twig'
+form_element_demo_radio:
+  filename: form-element-demo-radio.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-radio.twig
+  namespace: '@bolt/form-element-demo-radio.twig'
+form_element_demo_radios:
+  filename: form-element-demo-radios.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-radios.twig
+  namespace: '@bolt/form-element-demo-radios.twig'
+form_element_demo_select:
+  filename: form-element-demo-select.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-select.twig
+  namespace: '@bolt/form-element-demo-select.twig'
+form_element_demo_textarea:
+  filename: form-element-demo-textarea.twig
+  path: >-
+    src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-textarea.twig
+  namespace: '@bolt/form-element-demo-textarea.twig'
+form_input:
+  filename: form-input.twig
+  path: src/_patterns/02-components/bolt-forms/src/inputs/form-input.twig
+  namespace: '@bolt/form-input.twig'
+form_label:
+  filename: form-label.twig
+  path: src/_patterns/02-components/bolt-forms/src/elements/form-label.twig
+  namespace: '@bolt/form-label.twig'
+form_select:
+  filename: form-select.twig
+  path: src/_patterns/02-components/bolt-forms/src/inputs/form-select.twig
+  namespace: '@bolt/form-select.twig'
+form_textarea:
+  filename: form-textarea.twig
+  path: src/_patterns/02-components/bolt-forms/src/inputs/form-textarea.twig
+  namespace: '@bolt/form-textarea.twig'
 gcd:
   filename: gcd.twig
   path: src/_patterns/02-components/bolt-image/src/gcd.twig
@@ -539,6 +629,10 @@ table:
   filename: table.twig
   path: src/_patterns/01-core/04-elements/elements-tables/table.twig
   namespace: '@bolt/table.twig'
+tall_video_band_poc:
+  filename: tall-video-band-poc.twig
+  path: src/_patterns/04-pages/tall-video-band-poc.twig
+  namespace: '@bolt/tall-video-band-poc.twig'
 teaser:
   filename: teaser.twig
   path: src/_patterns/02-components/bolt-teaser/src/teaser.twig
@@ -605,6 +699,10 @@ video__external_controls:
   filename: video--external-controls.twig
   path: src/_patterns/02-components/bolt-video/demo/video--external-controls.twig
   namespace: '@bolt/video--external-controls.twig'
+video__hide_meta:
+  filename: video--hide-meta.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--hide-meta.twig
+  namespace: '@bolt/video--hide-meta.twig'
 video__inline_script:
   filename: video--inline-script.twig
   path: src/_patterns/02-components/bolt-video/demo/video--inline-script.twig
@@ -614,6 +712,18 @@ video__inline_script_with_external_controls:
   path: >-
     src/_patterns/02-components/bolt-video/demo/video--inline-script-with-external-controls.twig
   namespace: '@bolt/video--inline-script-with-external-controls.twig'
+video__show_meta:
+  filename: video--show-meta.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--show-meta.twig
+  namespace: '@bolt/video--show-meta.twig'
+video__show_meta_and_title:
+  filename: video--show-meta-and-title.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--show-meta-and-title.twig
+  namespace: '@bolt/video--show-meta-and-title.twig'
+video__show_meta_hide_title:
+  filename: video--show-meta-hide-title.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--show-meta-hide-title.twig
+  namespace: '@bolt/video--show-meta-hide-title.twig'
 video_background:
   filename: video-background.twig
   path: src/_patterns/02-components/bolt-video/demo/video-background.twig
