--- a/src/_patterns/02-components/bolt-form/package.json
+++ b/src/_patterns/02-components/bolt-form/package.json
@@ -23,7 +23,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {},
+  "dependencies": {
+    "choices.js": "^3.0.3"
+  },
   "devDependencies": {
     "@bolt/build-webpack": "^0.9.0"
   },
