--- a/src/_patterns/02-components/bolt-form/package.json
+++ b/src/_patterns/02-components/bolt-form/package.json
@@ -23,6 +23,9 @@
     "access": "public"
   },
   "dependencies": {},
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.9.0"
+  },
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/form --output-filename='bolt-form.min.js' --output-public-path /scripts/"
