Removing old Twig Components from PL

--- a/apps/pattern-lab--workshop/composer.json
+++ b/apps/pattern-lab--workshop/composer.json
@@ -36,10 +36,6 @@
       },
       {
         "type": "path",
-        "url": "../../packages/twig-extensions"
-      },
-      {
-        "type": "path",
         "url": "../../packages/core-php"
       },
       {
@@ -65,7 +61,6 @@
       "pattern-lab/styleguidekit-assets-default": "*",
       "evanlovely/plugin-twig-namespaces": "dev-master",
       "oomphinc/composer-installers-extender": "dev-master",
-      "bolt/twig-extensions": "*",
       "gajus/dindent": "dev-master",
       "symfony/yaml": "*"
     },
@@ -112,9 +107,6 @@
         ]
       },
       "patches-file": "composer.patches.json",
-      "installer-types": ["patternlab-plugin"],
-      "installer-paths": {
-        "src/_twig-components": ["bolt/twig-extensions"]
-      }
+      "installer-types": ["patternlab-plugin"]
     }
 }
