Building Bolt Data global

--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -20,6 +20,8 @@
   "require": {
     "twig/twig": "^1.0",
     "basaltinc/twig-tools": "^1.1.1",
-    "michelf/php-markdown": "^1.8.0"
+    "michelf/php-markdown": "^1.8.0",
+    "webmozart/path-util": "^2.3",
+    "shudrum/array-finder": "^1.1"
   }
 }
