Converting color data approach to new method, along with spacing, manifest, and twig namespaces.

--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -71,4 +71,4 @@ extensions:
 plugins:
   twigNamespaces:
     enabled: true
-    readFromFile: www/build/data/bolt-twig-namespaces.json
+    readFromFile: www/build/data/twig-namespaces.bolt.json
