--- a/src/_patterns/02-components/bolt-form/package.json
+++ b/src/_patterns/02-components/bolt-form/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "choices.js": "^3.0.3"
   },
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.9.0"
+  },
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/form --output-filename='bolt-form.min.js' --output-public-path /scripts/"
