--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -20,12 +20,9 @@
     }
   ],
   "autoload": {
-    "psr-0": {
-      "Drupal\\Core\\": "src/libs/",
-      "Drupal\\Core\\Template\\": "src/libs/"
-    },
     "psr-4": {
-      "Bolt\\": "src/"
+      "Bolt\\": "src/",
+      "Drupal\\Core\\": "src/libs/Drupal"
     }
   },
   "require": {
