--- a/config/config.yml
+++ b/config/config.yml
@@ -102,6 +102,11 @@ plugins:
           - src/_patterns/02-components/bolt-device-viewer/src/devices
           - src/_patterns/02-components/bolt-device-viewer/src/parts
           - src/_patterns/02-components/bolt-figure/src
+          - src/_patterns/02-components/bolt-form/demo/form-elements
+          - src/_patterns/02-components/bolt-form/demo/forms
+          - src/_patterns/02-components/bolt-form/src/elements
+          - src/_patterns/02-components/bolt-form/src
+          - src/_patterns/02-components/bolt-form/src/inputs
           - src/_patterns/02-components/bolt-headline/demo
           - src/_patterns/02-components/bolt-headline/demo/h1-through-h6
           - src/_patterns/02-components/bolt-headline/demo/text-alignment
