--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -50,6 +50,7 @@
     "@bolt/components-critical-fonts": "^0.9.6",
     "@bolt/components-critical-path": "^0.9.6",
     "@bolt/components-figure": "^0.9.0",
+    "@bolt/components-form": "^0.0.0",
     "@bolt/components-headline": "^0.9.0",
     "@bolt/components-icon": "^0.9.8",
     "@bolt/components-icons": "^0.9.6",
