--- a/config/config.yml
+++ b/config/config.yml
@@ -140,6 +140,7 @@ plugins:
           - src/_patterns/04-pages/d8-homepage
           - src/_patterns/04-pages/d8-product-landing
           - src/_patterns/04-pages/d8-resource-details
+          - src/_patterns/04-pages/form-sandbox
     roots: {}
 ishMinimum: '240'
 ishMaximum: '2600'
