fix: adding main field to Form component package.json so pre-build script doesnt error out; adding form component as dependency to bolt/bolt package for full build

--- a/src/_patterns/02-components/bolt-form/package.json
+++ b/src/_patterns/02-components/bolt-form/package.json
@@ -18,6 +18,7 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
+  "main": "src/form.js",
   "style": "src/form.scss",
   "publishConfig": {
     "access": "public"
