--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -17,6 +17,7 @@
     "@bolt/components-device-viewer": "^0.9.8",
     "@bolt/components-icon": "^0.9.8",
     "@bolt/components-image": "^0.9.8",
+    "@bolt/components-form": "^0.0.0",
     "@bolt/components-nav-bar": "^0.10.0",
     "@bolt/components-smooth-scroll": "^0.9.5",
     "@bolt/components-sticky": "^0.10.0",
