fix: adding main field to Form component package.json so pre-build script doesnt error out; adding form component as dependency to bolt/bolt package for full build

--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -17,6 +17,7 @@
     "@bolt/components-device-viewer": "^0.10.1",
     "@bolt/components-icon": "^0.10.1",
     "@bolt/components-image": "^0.10.1",
+    "@bolt/components-form": "^0.0.0",
     "@bolt/components-nav-bar": "^0.10.1",
     "@bolt/components-smooth-scroll": "^0.9.5",
     "@bolt/components-sticky": "^0.10.0",
