--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -31,7 +31,7 @@
     "michelf/php-markdown": "^1.8.0",
     "mexitek/phpcolors": "^0.4.0",
     "drupal/core-render": "8.4.x-dev",
-    "drupal/core-utility": "8.4.x-dev"
+    "drupal/core-utility": "8.4.x-dev",
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1"
   }
