--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "bolt/core-php",
   "description": "Core PHP functionality for Bolt",
+  "version": "0.9.0",
   "type": "library",
   "license": "MIT",
   "authors": [
