styles: inline label updates

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -165,6 +165,10 @@ card:
   filename: card.twig
   path: src/_patterns/02-components/bolt-card/src/card.twig
   namespace: '@bolt/card.twig'
+card__simple:
+  filename: card--simple.twig
+  path: src/_patterns/02-components/bolt-card/src/card--simple.twig
+  namespace: '@bolt/card--simple.twig'
 card_kitchen_sink:
   filename: card-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
@@ -266,6 +270,83 @@ flag:
   filename: flag.twig
   path: src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.twig
   namespace: '@bolt/flag.twig'
+form:
+  filename: form.twig
+  path: src/_patterns/02-components/bolt-form/src/form.twig
+  namespace: '@bolt/form.twig'
+form_button:
+  filename: form-button.twig
+  path: src/_patterns/02-components/bolt-form/src/inputs/form-button.twig
+  namespace: '@bolt/form-button.twig'
+form_checkboxes:
+  filename: form-checkboxes.twig
+  path: src/_patterns/02-components/bolt-form/src/inputs/form-checkboxes.twig
+  namespace: '@bolt/form-checkboxes.twig'
+form_demo_campaign_landing:
+  filename: form-demo-campaign-landing.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/forms/form-demo-campaign-landing.twig
+  namespace: '@bolt/form-demo-campaign-landing.twig'
+form_demo_partner_faceted_search:
+  filename: form-demo-partner-faceted-search.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/forms/form-demo-partner-faceted-search.twig
+  namespace: '@bolt/form-demo-partner-faceted-search.twig'
+form_element:
+  filename: form-element.twig
+  path: src/_patterns/02-components/bolt-form/src/elements/form-element.twig
+  namespace: '@bolt/form-element.twig'
+form_element_demo_checkbox:
+  filename: form-element-demo-checkbox.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-checkbox.twig
+  namespace: '@bolt/form-element-demo-checkbox.twig'
+form_element_demo_checkboxes:
+  filename: form-element-demo-checkboxes.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-checkboxes.twig
+  namespace: '@bolt/form-element-demo-checkboxes.twig'
+form_element_demo_input_element:
+  filename: form-element-demo-input-element.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-input-element.twig
+  namespace: '@bolt/form-element-demo-input-element.twig'
+form_element_demo_radio:
+  filename: form-element-demo-radio.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-radio.twig
+  namespace: '@bolt/form-element-demo-radio.twig'
+form_element_demo_radios:
+  filename: form-element-demo-radios.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-radios.twig
+  namespace: '@bolt/form-element-demo-radios.twig'
+form_element_demo_select:
+  filename: form-element-demo-select.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-select.twig
+  namespace: '@bolt/form-element-demo-select.twig'
+form_element_demo_textarea:
+  filename: form-element-demo-textarea.twig
+  path: >-
+    src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-textarea.twig
+  namespace: '@bolt/form-element-demo-textarea.twig'
+form_input:
+  filename: form-input.twig
+  path: src/_patterns/02-components/bolt-form/src/inputs/form-input.twig
+  namespace: '@bolt/form-input.twig'
+form_label:
+  filename: form-label.twig
+  path: src/_patterns/02-components/bolt-form/src/elements/form-label.twig
+  namespace: '@bolt/form-label.twig'
+form_select:
+  filename: form-select.twig
+  path: src/_patterns/02-components/bolt-form/src/inputs/form-select.twig
+  namespace: '@bolt/form-select.twig'
+form_textarea:
+  filename: form-textarea.twig
+  path: src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
+  namespace: '@bolt/form-textarea.twig'
 gcd:
   filename: gcd.twig
   path: src/_patterns/02-components/bolt-image/src/gcd.twig
