chore: setting up search filters component

--- a/src/_patterns/02-components/bolt-search-filters/package.json
+++ b/src/_patterns/02-components/bolt-search-filters/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/components-search",
+  "name": "@bolt/components-search-filters",
   "description": "Search Component in Bolt",
   "type": "pattern",
   "patternType": "molecules",
@@ -32,8 +32,8 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/search.scss",
-  "twig": "src/search.twig",
+  "style": "src/search-filters.scss",
+  "twig": "src/search-filters.twig",
   "publishConfig": {
     "access": "public"
   },
