--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -64,6 +64,6 @@
     "@bolt/components-teaser": "^0.9.0-rc.5",
     "@bolt/components-unordered-list": "^0.9.0-rc.5",
     "@bolt/components-video": "^0.9.0-rc.5",
-    "@bolt/components-search": "^0.0.0"
+    "@bolt/components-search-filters": "^0.0.0"
   }
 }
