chore: moving demo pages around

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -511,10 +511,10 @@ screen_tilt:
   filename: _screen-tilt.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_screen-tilt.twig
   namespace: '@bolt/_screen-tilt.twig'
-search:
-  filename: search.twig
-  path: src/_patterns/02-components/bolt-search/src/search.twig
-  namespace: '@bolt/search.twig'
+search_filters:
+  filename: search-filters.twig
+  path: src/_patterns/02-components/bolt-search-filters/src/search-filters.twig
+  namespace: '@bolt/search-filters.twig'
 sensor:
   filename: _sensor.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_sensor.twig
