--- a/packages/components/bolt-chip/package.json
+++ b/packages/components/bolt-chip/package.json
@@ -8,6 +8,7 @@
     "design system"
   ],
   "version": "0.2.0",
+  "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
