--- a/packages/components/bolt-nav-bar/package.json
+++ b/packages/components/bolt-nav-bar/package.json
@@ -9,6 +9,7 @@
     "components"
   ],
   "version": "0.1.0-beta.5",
+  "sourceFilesFrom": "0.10.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -37,6 +38,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1"
+    "@bolt/core": "^0.5.0-beta.1",
+    "gumshoejs": "^3.5.0"
   }
 }
