migrate background-shape 0.9.0

--- a/packages/components/background-shapes/package.json
+++ b/packages/components/background-shapes/package.json
@@ -10,6 +10,7 @@
     "design system"
   ],
   "version": "0.1.0-beta.2",
+  "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
