--- a/packages/components/bolt-action-blocks/package.json
+++ b/packages/components/bolt-action-blocks/package.json
@@ -9,6 +9,7 @@
     "components"
   ],
   "version": "0.3.0",
+  "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
