migrate background component

--- a/packages/components/bolt-background/package.json
+++ b/packages/components/bolt-background/package.json
@@ -8,6 +8,7 @@
     "design system"
   ],
   "version": "0.3.0-beta.2",
+  "sourceFilesFrom": "0.9.2",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
