--- a/packages/components/bolt-band/package.json
+++ b/packages/components/bolt-band/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bolt/components-band",
   "version": "0.6.0-beta.5",
+  "sourceFilesFrom": "0.9.8",
   "description": "Band Component in Bolt",
   "main": "src/band.js",
   "style": "src/band.scss",
