--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -12,6 +12,7 @@
     "design system"
   ],
   "version": "0.7.0-beta.5",
+  "sourceFilesFrom": "0.9.8",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
