--- a/packages/components/bolt-critical-fonts/package.json
+++ b/packages/components/bolt-critical-fonts/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bolt/components-critical-fonts",
   "version": "0.5.0-beta.5",
+  "sourceFilesFrom": "0.9.6",
   "description": "Async critical path font loader",
   "repository": {
     "type": "git",
