update @bolt/device-viewer to 0.9.8

--- a/packages/components/bolt-device-viewer/package.json
+++ b/packages/components/bolt-device-viewer/package.json
@@ -9,6 +9,7 @@
 		"components"
 	],
 	"version": "0.2.0-beta.6",
+  "sourceFilesFrom": "0.9.8",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
