update @bolt/figure to 0.9.0

--- a/packages/components/bolt-figure/package.json
+++ b/packages/components/bolt-figure/package.json
@@ -11,6 +11,7 @@
 		"components"
 	],
 	"version": "0.2.0-beta.2",
+  "sourceFilesFrom": "0.9.0",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
