update @bolt/headline to 0.9.0

--- a/packages/components/bolt-headline/package.json
+++ b/packages/components/bolt-headline/package.json
@@ -8,6 +8,7 @@
     "design system"
   ],
   "version": "0.7.0-beta.2",
+  "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -18,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
-  "style": "src/headline.scss",
+  "style": "src/all-headlines.scss",
   "publishConfig": {
     "access": "public"
   },
