--- a/packages/components/bolt-icon/package.json
+++ b/packages/components/bolt-icon/package.json
@@ -9,6 +9,7 @@
     "design system"
   ],
   "version": "0.4.0-beta.5",
+  "sourceFilesFrom": "0.9.8",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -27,5 +28,6 @@
     "@bolt/core": "^0.5.0-beta.1"
   },
   "main": "src/icon.js",
-  "style": "src/icon.scss"
+  "style": "src/icon.scss",
+  "twig": "src/icon.twig"
 }
