--- a/packages/components/bolt-image/package.json
+++ b/packages/components/bolt-image/package.json
@@ -10,6 +10,7 @@
     "image"
   ],
   "version": "0.4.0-beta.6",
+  "sourceFilesFrom": "0.9.8",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
