--- a/packages/components/bolt-logo/package.json
+++ b/packages/components/bolt-logo/package.json
@@ -14,6 +14,7 @@
     "logo"
   ],
   "version": "0.3.0-beta.5",
+  "sourceFilesFrom": "0.9.8",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
