--- a/packages/components/bolt-page-header/package.json
+++ b/packages/components/bolt-page-header/package.json
@@ -8,6 +8,7 @@
     "design system"
   ],
   "version": "0.0.3-beta.4",
+  "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
