--- a/packages/components/page-footer/package.json
+++ b/packages/components/page-footer/package.json
@@ -2,6 +2,7 @@
   "name": "@bolt/components-page-footer",
   "description": "Page Footer Component",
   "version": "0.4.0",
+  "sourceFilesFrom": "0.9.0",
   "license": "MIT",
   "private": true,
   "style": "_page-footer.scss"
