--- a/packages/components/bolt-site/package.json
+++ b/packages/components/bolt-site/package.json
@@ -9,6 +9,7 @@
     "design system"
   ],
   "version": "0.5.0",
+  "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
