update @bolt/smooth-scroll to 0.9.5

--- a/packages/components/bolt-smooth-scroll/package.json
+++ b/packages/components/bolt-smooth-scroll/package.json
@@ -9,6 +9,7 @@
     "component"
   ],
   "version": "0.1.0-beta.4",
+  "sourceFilesFrom": "0.9.5",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
