--- a/packages/components/bolt-sticky/package.json
+++ b/packages/components/bolt-sticky/package.json
@@ -9,6 +9,7 @@
     "components"
   ],
   "version": "0.1.0-beta.4",
+  "sourceFilesFrom": "0.10.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
