--- a/packages/components/bolt-teaser/package.json
+++ b/packages/components/bolt-teaser/package.json
@@ -10,6 +10,7 @@
     "design system"
   ],
   "version": "0.2.0",
+  "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
