--- a/packages/components/bolt-video/package.json
+++ b/packages/components/bolt-video/package.json
@@ -11,6 +11,7 @@
 		"components"
 	],
 	"version": "0.1.0-beta.5",
+  "sourceFilesFrom": "0.9.6",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
