--- a/packages/components/bolt-unordered-list/package.json
+++ b/packages/components/bolt-unordered-list/package.json
@@ -11,6 +11,7 @@
     "components"
   ],
   "version": "0.1.2",
+  "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
