update @bolt/brightcove-player to 0.9.6

--- a/packages/components/brightcove-player/package.json
+++ b/packages/components/brightcove-player/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bolt/components-brightcove-player",
   "version": "0.1.0-beta.5",
+  "sourceFilesFrom": "0.9.6",
   "main": "dist/brightcove-player.min.js",
   "module:dev": "src/brightcove-player.js",
   "style": "src/brightcove-player.scss",
