propagate breadcrumb demo

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "packages/components/bolt-background",
     "packages/components/bolt-band",
     "packages/components/bolt-blockquote",
+    "packages/components/bolt-breadcrumb",
     "packages/components/bolt-button-group",
     "packages/components/bolt-card",
     "packages/components/bolt-chip",
