--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -23,6 +23,7 @@
     "@bolt/components-background-shapes": "0.1.0-beta.2",
     "@bolt/components-band": "0.6.0-beta.5",
     "@bolt/components-blockquote": "0.2.4",
+    "@bolt/components-breadcrumb": "0.0.0",
     "@bolt/components-button": "0.7.0-beta.5",
     "@bolt/components-button-group": "0.2.0",
     "@bolt/components-card": "0.6.0-beta.5",
