add sourceFilesFrom to package.json for breadcrumb

--- a/packages/components/bolt-breadcrumb/package.json
+++ b/packages/components/bolt-breadcrumb/package.json
@@ -9,6 +9,7 @@
     "components"
   ],
   "version": "0.0.0",
+  "sourceFilesFrom": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
