--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
-Pages:
+pages:
 - Home: 'index.md'
 - Setup: 'setup.md'
 - FolderStructure: 'folder-structure.md'
 - Workflows:
-  - 'Starting Pattern Lab' : 'workflows/starting-pl.md'
-  - 'Adding a new component' : 'workflows/adding-a-new-component.md'
-  - 'Troubleshooting' : 'workflows/troubleshooting.md'
+  - 'Starting Pattern Lab': 'workflows/starting-pl.md'
+  - 'Adding a new component': 'workflows/adding-a-new-component.md'
+  - 'Troubleshooting': 'workflows/troubleshooting.md'
