Contributor docs - Adjustment to mkdocs.yml file - try again

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 pages:
 - Home: 'index.md'
 - Setup: 'setup.md'
-- FolderStructure: 'folder-structure.md'
+- 'Folder Structure': 'folder-structure.md'
 - Workflows:
   - 'Starting Pattern Lab': 'workflows/starting-pl.md'
   - 'Adding a new component': 'workflows/adding-a-new-component.md'
