Migrate Updates: Icons, Image, Link, Logo, Header, Ordered-list (#441)
* update @bolt/icon to 0.9.8

* update @bolt/icons to 0.9.6

* update @bolt/icons to 0.9.6

* correct icons sourceFilesFrom to 0.9.6

* update @bolt/image to 0.9.8

* update @bolt/link to 0.9.0

* update logo, fix sourceFilesFrom version number on link

* update ordered-list to 0.9.0

* update @bolt/header to 0.9.0

--- a/packages/components/bolt-icons/package.json
+++ b/packages/components/bolt-icons/package.json
@@ -8,6 +8,7 @@
     "design system"
   ],
   "version": "0.2.0-beta.3",
+  "sourceFilesFrom": "0.9.6",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
