--- a/packages/components/bolt-link/package.json
+++ b/packages/components/bolt-link/package.json
@@ -9,6 +9,7 @@
     "design system"
   ],
   "version": "0.2.1",
+  "sourceFilesFrom": "0.0.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
