chore: d8 partner search demo

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -129,6 +129,10 @@ bolt_homepage:
   filename: bolt-homepage.twig
   path: src/_patterns/04-pages/bolt-homepage/bolt-homepage.twig
   namespace: '@bolt/bolt-homepage.twig'
+bolt_search_kitchen_sink:
+  filename: bolt-search-kitchen-sink.twig
+  path: src/_patterns/04-pages/bolt-sandbox/bolt-search-kitchen-sink.twig
+  namespace: '@bolt/bolt-search-kitchen-sink.twig'
 bottom_bar:
   filename: _bottom-bar.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_bottom-bar.twig
@@ -246,10 +250,6 @@ d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
   namespace: '@bolt/d8-resource-details.twig'
-d8_search:
-  filename: d8-search.twig
-  path: src/_patterns/04-pages/d8-news/d8-search.twig
-  namespace: '@bolt/d8-search.twig'
 default_template:
   filename: default-template.twig
   path: src/_patterns/03-templates/default/default-template.twig
