--- a/config/config.yml
+++ b/config/config.yml
@@ -135,6 +135,7 @@ plugins:
           - src/_patterns/04-pages/bolt-theming-qa
           - src/_patterns/04-pages/d8-homepage
           - src/_patterns/04-pages/d8-news
+          - src/_patterns/04-pages/d8-partners
           - src/_patterns/04-pages/d8-product-landing
           - src/_patterns/04-pages/d8-resource-details
     roots: {}
