--- a/src/_patterns/02-components/bolt-breadcrumb/package.json
+++ b/src/_patterns/02-components/bolt-breadcrumb/package.json
@@ -10,7 +10,7 @@
     "design system",
     "components"
   ],
-  "version": "0.0.0",
+  "version": "0.10.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -39,10 +39,10 @@
   },
   "dependencies": {
     "@bolt/settings-colors": "^0.9.0",
-    "@bolt/settings-global": "^0.9.0",
     "@bolt/settings-font-size": "^0.9.0",
+    "@bolt/settings-global": "^0.9.0",
     "@bolt/tools-color-palette": "^0.9.0",
-    "@bolt/tools-spacing": "^0.9.0",
-    "@bolt/tools-font-size": "^0.9.0"
+    "@bolt/tools-font-size": "^0.9.0",
+    "@bolt/tools-spacing": "^0.9.0"
   }
 }
