--- a/apps/bolt-site--storefront/composer.json
+++ b/apps/bolt-site--storefront/composer.json
@@ -2,7 +2,16 @@
     "name": "bolt/website--storefront",
     "type": "project",
     "license": "MIT",
+    "minimum-stability": "dev",
+    "repositories": [
+      {
+        "type": "path",
+        "url": "../../packages/core-php"
+      }
+    ],
     "require": {
-        "twig/twig": "^1.0"
+      "bolt/core-php": "^0.9.0",
+      "twig/twig": "^1.0",
+      "pattern-lab/drupal-twig-extensions": "^0.2.0"
     }
 }
