--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -43,6 +43,7 @@
     "@bolt/components-brightcove-player": "^0.10.1",
     "@bolt/components-button": "^0.10.1",
     "@bolt/components-button-group": "^0.9.0",
+    "@bolt/components-breadcrumb": "^0.10.1",
     "@bolt/components-card": "^0.10.1",
     "@bolt/components-chip": "^0.9.0",
     "@bolt/components-chip-list": "^0.9.0",
