chore: migrate ratio object updates to v1.0 branch

--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -3,6 +3,7 @@
   "description": "Global styles for Bolt Design System",
   "version": "0.5.0",
   "license": "MIT",
+  "main": "styles/index.js",
   "style": "styles/index.scss",
   "twig": [
     "styles/05-objects/objects-wrapper/wrapper.twig"
