fix: adding updated polyfill loader to v1.0 - adds more refined cross browser polyfills + using new shadydom polyfill with massive IE 11 perf improvements

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,11 +10,18 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@webcomponents/webcomponentsjs": "^1.0.22",
+    "@webcomponents/custom-elements": "^1.0.8",
+    "@webcomponents/html-imports": "^1.1.1",
+    "@webcomponents/shadycss": "^1.1.1",
+    "@webcomponents/shadydom": "github:muan/shadydom#qsa",
+    "@webcomponents/template": "^1.2.2",
+    "@webcomponents/webcomponents-platform": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^1.1.0",
     "core-js": "^2.5.1",
+    "document-register-element": "^1.7.2",
     "es6-promise": "^4.1.1",
-    "preact": "^8.2.5",
-    "skatejs": "^5.0.0-beta.4",
+    "preact": "^8.2.7",
+    "skatejs": "^5.1.1",
     "yocss": "^0.5.1",
     "breakpoint-sass": "^2.7.1",
     "breakpoint-slicer": "bolt-design-system/breakpoint-slicer",
