--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -40,6 +40,7 @@
     "@bolt/components-background-shapes": "^0.9.0",
     "@bolt/components-band": "^0.10.1",
     "@bolt/components-blockquote": "^0.9.0",
+    "@bolt/components-breadcrumb": "^0.10.1",
     "@bolt/components-brightcove-player": "^0.10.1",
     "@bolt/components-button": "^0.10.1",
     "@bolt/components-button-group": "^0.9.0",
