feat: adding new experimental HyperHTML renderer - temporary solution to work around modifying Preact vdom if slots not support

--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -18,6 +18,7 @@
     "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^1.1.0",
     "core-js": "^2.5.1",
+    "hyperhtml": "^2.5.10",
     "document-register-element": "^1.7.2",
     "es6-promise": "^4.1.1",
     "preact": "^8.2.7",
