--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -42,7 +42,8 @@
     "@bolt/core": "^0.10.1",
     "@bolt/settings-all": "^0.9.0",
     "@bolt/tools-all": "^0.9.0",
-    "@bolt/utilities-spacing": "^0.9.0"
+    "@bolt/utilities-spacing": "^0.9.0",
+    "@bolt/utilities-visuallyhidden": "^0.9.0"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
