--- a/apps/bolt-site--storefront/package.json
+++ b/apps/bolt-site--storefront/package.json
@@ -8,7 +8,9 @@
     "build:noisy": "bolt build --verbosity 5",
     "serve": "bolt serve",
     "watch": "bolt watch",
-    "start": "bolt start"
+    "start": "bolt start",
+    "test:links": "blc http://localhost:3000 --recursive --ordered --filter-level 2",
+    "test": "npm run test:links"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
     "@bolt/components-page-header": "0.0.3-beta.4",
     "@bolt/components-site": "0.5.0",
     "@bolt/core": "0.5.0-beta.1",
-    "@bolt/global": "0.5.0"
+    "@bolt/global": "0.5.0",
+    "broken-link-checker": "^0.7.7"
   }
 }
