--- a/apps/bolt-site--storefront/package.json
+++ b/apps/bolt-site--storefront/package.json
@@ -23,6 +23,13 @@
     "@bolt/components-site": "0.5.0",
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0",
+    "@bolt/components-band": "0.6.0-beta.5",
+    "@bolt/components-button": "0.7.0-beta.5",
+    "@bolt/components-card": "0.6.0-beta.5",
+    "@bolt/components-icon": "0.4.0-beta.5",
+    "@bolt/components-headline": "0.7.0-beta.2",
+    "@bolt/components-teaser": "0.2.0",
+    "@bolt/components-image": "0.4.0-beta.6",
     "broken-link-checker": "^0.7.7"
   }
 }
