WIP: docs site polish

--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -6,7 +6,8 @@
   "main": "styles/index.js",
   "style": "styles/index.scss",
   "twig": [
-    "styles/05-objects/objects-wrapper/wrapper.twig"
+    "styles/05-objects/objects-wrapper/wrapper.twig",
+    "styles/05-objects/objects-inline-list/src/inline-list.twig"
   ],
   "repository": {
     "type": "git",
