--- a/apps/bolt-site--storefront/package.json
+++ b/apps/bolt-site--storefront/package.json
@@ -24,7 +24,9 @@
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0",
     "@bolt/components-band": "0.6.0-beta.5",
+    "@bolt/components-link": "0.2.1",
     "@bolt/components-button": "0.7.0-beta.5",
+    "@bolt/components-button-group": "0.2.0",
     "@bolt/components-card": "0.6.0-beta.5",
     "@bolt/components-icon": "0.4.0-beta.5",
     "@bolt/components-headline": "0.7.0-beta.2",
