--- a/packages/components/bolt-headline/package.json
+++ b/packages/components/bolt-headline/package.json
@@ -19,6 +19,9 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
+  "twig": [
+    "src/headline.twig"
+  ],
   "style": "src/all-headlines.scss",
   "publishConfig": {
     "access": "public"
