Adding more details to Example Drupal Theme

--- a/apps/example_drupal_theme/example_drupal_theme.libraries.yml
+++ b/apps/example_drupal_theme/example_drupal_theme.libraries.yml
@@ -5,9 +5,24 @@ global:
   js:
     dist/bolt-global.js: {}
 
-button:
+device-viewer:
   css:
     base:
-      dist/bolt-button.css: {}
+      dist/bolt-components-device-viewer.css: {}
   js:
-    dist/bolt-button.js: {}
+    dist/bolt-components-device-viewer.js: {}
+
+nav-bar:
+  css:
+    base:
+      dist/bolt-components-nav-bar.css: {}
+  js:
+    dist/bolt-components-nav-bar.js: {}
+
+smooth-scroll:
+  css:
+    base:
+      dist/bolt-components-smooth-scroll.css: {}
+  js:
+    dist/bolt-components-smooth-scroll.js: {}
+
