--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -47,6 +47,7 @@
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-loader": "^2.0.10",
