Adding build command for all apps

--- a/apps/example_drupal_theme/package.json
+++ b/apps/example_drupal_theme/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "bolt build",
     "build:noisy": "bolt build --verbosity 3",
+    "build:prod": "bolt build --prod",
     "start": "bolt start"
   },
   "dependencies": {
