--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "bolt build",
     "build:noisy": "bolt build --verbosity 5",
+    "build:prod": "bolt build --prod",
     "serve": "bolt serve",
     "watch": "bolt watch",
     "start": "bolt start"
