Adding npm start message

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pattern lab"
   ],
   "scripts": {
-    "start": "cd apps/pattern-lab--workshop && npm start",
+    "start": "echo 'To start up a server and watches, head into any of the folders in the apps/ directory, then run npm start there.' && echo 'If you want to start Pattern Lab, run this:' && echo '' && echo 'cd apps/pattern-lab--workshop' && echo 'npm start'",
     "setup": "npm run bootstrap && npm run composer:setup",
 
     "build:pl": "cd apps/pattern-lab--workshop && npm run build:prod",
