--- a/packages/components/bolt-critical-fonts/package.json
+++ b/packages/components/bolt-critical-fonts/package.json
@@ -15,25 +15,15 @@
   ],
   "author": "Salem Ghoweri",
   "license": "MIT",
-  "devDependencies": {
-    "@bolt/build-webpack": "^0.5.0-beta.4"
-  },
   "dependencies": {
-    "@bolt/components-headline": "^0.7.0-beta.2",
-    "@bolt/elements-headings": "^0.4.0",
-    "@bolt/elements-page": "^0.5.0",
-    "@bolt/generic-all": "^0.5.2",
-    "@bolt/settings-all": "^0.7.4",
-    "@bolt/tools-all": "^0.5.4",
+    "@bolt/components-headline": "0.7.0-beta.2",
+    "@bolt/global": "0.5.0",
+    "@bolt/core": "0.5.0-beta.1",
     "fontfaceobserver": "^2.0.13"
   },
   "publishConfig": {
     "access": "public"
   },
   "main": "src/critical-fonts.js",
-  "style": "src/critical-fonts.css",
-  "scripts": {
-    "prepublishOnly": "npm run build",
-    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry critical-fonts=./src/critical-fonts"
-  }
+  "style": "src/critical-fonts.scss"
 }
