--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "@bolt/core": "0.5.0-beta.1",
     "normalize-scss": "^7.0.0"
-  }
+  },
+  "files": [
+    "fonts/**/*"
+  ]
 }
