--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -47,6 +47,7 @@
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-loader": "^2.0.10",
@@ -56,6 +57,7 @@
     "sharp": "^0.19.0",
     "string-replace-loader": "^1.3.0",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.2.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0",
     "webpack-manifest-plugin": "^2.0.0-rc.1"
