chore: adding updates bolt-manifest.yml

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -141,6 +141,15 @@ breadcrumb:
   filename: breadcrumb.twig
   path: src/_patterns/02-components/bolt-breadcrumb/src/breadcrumb.twig
   namespace: '@bolt/breadcrumb.twig'
+breadcrumb_demo:
+  filename: breadcrumb-demo.twig
+  path: src/_patterns/02-components/bolt-breadcrumb/demo/breadcrumb-demo.twig
+  namespace: '@bolt/breadcrumb-demo.twig'
+breadcrumb_demo_link_current:
+  filename: breadcrumb-demo-link-current.twig
+  path: >-
+    src/_patterns/02-components/bolt-breadcrumb/demo/breadcrumb-demo-link-current.twig
+  namespace: '@bolt/breadcrumb-demo-link-current.twig'
 brightcove_player:
   filename: brightcove-player.twig
   path: src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
@@ -149,10 +158,34 @@ button:
   filename: button.twig
   path: src/_patterns/02-components/bolt-button/src/button.twig
   namespace: '@bolt/button.twig'
+button__data_attributes:
+  filename: button--data-attributes.twig
+  path: src/_patterns/02-components/bolt-button/demos/button--data-attributes.twig
+  namespace: '@bolt/button--data-attributes.twig'
+button__form_submit:
+  filename: button--form-submit.twig
+  path: src/_patterns/02-components/bolt-button/demos/button--form-submit.twig
+  namespace: '@bolt/button--form-submit.twig'
 button__icon_only:
   filename: button--icon-only.twig
   path: src/_patterns/02-components/bolt-button/demos/button--icon-only.twig
   namespace: '@bolt/button--icon-only.twig'
+button__no_shadow:
+  filename: button--no-shadow.twig
+  path: src/_patterns/02-components/bolt-button/demos/button--no-shadow.twig
+  namespace: '@bolt/button--no-shadow.twig'
+button__static_html:
+  filename: button--static-html.twig
+  path: src/_patterns/02-components/bolt-button/demos/button--static-html.twig
+  namespace: '@bolt/button--static-html.twig'
+button__utils:
+  filename: button--utils.twig
+  path: src/_patterns/02-components/bolt-button/demos/button--utils.twig
+  namespace: '@bolt/button--utils.twig'
+button_align_items:
+  filename: 05-button-align-items.twig
+  path: src/_patterns/02-components/bolt-button/demos/05-button-align-items.twig
+  namespace: '@bolt/05-button-align-items.twig'
 button_group:
   filename: button-group.twig
   path: src/_patterns/02-components/bolt-button-group/src/button-group.twig
@@ -161,6 +194,30 @@ button_perf_test:
   filename: button-perf-test.twig
   path: src/_patterns/04-pages/button-perf-test.twig
   namespace: '@bolt/button-perf-test.twig'
+button_rounded_options:
+  filename: 05-button-rounded-options.twig
+  path: src/_patterns/02-components/bolt-button/demos/05-button-rounded-options.twig
+  namespace: '@bolt/05-button-rounded-options.twig'
+button_sizes:
+  filename: 05-button-sizes.twig
+  path: src/_patterns/02-components/bolt-button/demos/05-button-sizes.twig
+  namespace: '@bolt/05-button-sizes.twig'
+button_states:
+  filename: 05-button-states.twig
+  path: src/_patterns/02-components/bolt-button/demos/05-button-states.twig
+  namespace: '@bolt/05-button-states.twig'
+button_tags:
+  filename: 05-button-tags.twig
+  path: src/_patterns/02-components/bolt-button/demos/05-button-tags.twig
+  namespace: '@bolt/05-button-tags.twig'
+button_theming:
+  filename: 05-button-theming.twig
+  path: src/_patterns/02-components/bolt-button/demos/05-button-theming.twig
+  namespace: '@bolt/05-button-theming.twig'
+button_widths:
+  filename: 05-button-widths.twig
+  path: src/_patterns/02-components/bolt-button/demos/05-button-widths.twig
+  namespace: '@bolt/05-button-widths.twig'
 camera:
   filename: _camera.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_camera.twig
@@ -206,6 +263,10 @@ crop:
   filename: crop.twig
   path: src/_patterns/01-core/05-objects/bolt-crop-object/src/crop.twig
   namespace: '@bolt/crop.twig'
+d8_breadcrumbs:
+  filename: d8-breadcrumbs.twig
+  path: src/_patterns/04-pages/d8-campaign-landing/d8-breadcrumbs.twig
+  namespace: '@bolt/d8-breadcrumbs.twig'
 d8_homepage:
   filename: d8-homepage.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage.twig
