Migrate Inline Twig Function, Update Webpack to Support Font Assets, Wire-up Critical Font Logic (#467)
* feat: implement inline Twig function; update Webpack to support font assets; removes original @bolt/assets package - moves font assets to @bolt/global; remove @font-face Bolt mixin from Sass to work around limitations of Webpack resolve-url-loader

* fix: remove EOT and TTF font support

* fix: updating inline Twig function to handle errors and missing files

* fix: fixing JS error

* Decreasing css compression level on prod

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "packages/components/bolt-band",
     "packages/components/bolt-blockquote",
     "packages/components/bolt-breadcrumb",
+    "packages/components/bolt-critical-fonts",
     "packages/components/bolt-button-group",
     "packages/components/bolt-card",
     "packages/components/bolt-chip",
