--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -33,6 +33,7 @@
     "chalk": "^2.3.0",
     "chokidar": "^2.0.0",
     "clean-css-loader": "^0.1.4",
+    "file-loader": "^1.1.8",
     "commander": "^2.12.2",
     "convert-hrtime": "^2.0.0",
     "css-loader": "^0.28.7",
@@ -59,6 +60,7 @@
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.2.0",
     "webpack": "^3.10.0",
+    "resolve-url-loader": "^2.2.1",
     "webpack-dev-server": "^2.11.0",
     "webpack-manifest-plugin": "^2.0.0-rc.1"
   },
