--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -30,6 +30,7 @@
     "@bolt/components-card": "0.6.0-beta.5",
     "@bolt/components-chip": "0.2.0",
     "@bolt/components-chip-list": "0.2.0",
+    "@bolt/components-critical-fonts": "0.5.0-beta.5",
     "@bolt/components-device-viewer": "0.2.0-beta.6",
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-icon": "0.4.0-beta.5",
