Setting up tests

--- a/package.json
+++ b/package.json
@@ -22,16 +22,13 @@
   "scripts": {
     "start": "echo 'To start up a server and watches, head into any of the folders in the apps/ directory, then run npm start there.' && echo 'If you want to start Pattern Lab, run this:' && echo '' && echo 'cd apps/pattern-lab--workshop' && echo 'npm start'",
     "setup": "npm run bootstrap && npm run composer",
-
     "build:pl": "cd apps/pattern-lab--workshop && npm run build:prod",
     "Xbuild:bolt-site": "cd apps/bolt-site--storefront && npm run build:prod",
     "build:example-drupal-theme": "cd apps/example_drupal_theme && npm run build:prod",
     "build": "npm-run-all --serial build:*",
-
     "composer:pl": "cd apps/pattern-lab--workshop && rm -rf vendor composer.lock && composer install --no-interaction",
     "Xcomposer:bolt-site": "cd apps/bolt-site--storefront && rm -rf vendor composer.lock && composer install --no-interaction",
     "composer": "npm-run-all --serial composer:*",
-
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "node scripts/monorepo-tests.js",
     "predeploy": "npm run build",
@@ -40,6 +37,7 @@
     "clean:lerna": "lerna clean -Y",
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "npm run build",
+    "test": "jest --testPathIgnorePatterns 'sandbox' --testPathIgnorePatterns 'brightcove-player.test.js'",
     "snyk-protect": "snyk protect"
   },
   "config": {
@@ -63,6 +61,7 @@
   },
   "devDependencies": {
     "husky": "^0.14.3",
+    "jest": "^22.4.0",
     "lerna": "^2.5.1",
     "netlify-cli": "^1.2.2",
     "npm-run-all": "^4.1.2",
