--- a/packages/components/bolt-icon/package.json
+++ b/packages/components/bolt-icon/package.json
@@ -24,7 +24,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-icons": "^0.2.0-beta.3",
+    "@bolt/components-icons": "0.10.2",
     "@bolt/core": "^0.5.0-beta.1"
   },
   "main": "src/icon.js",
