Changing www dir for both bolt-site and pattern-lab to www dir at top of repo

--- a/apps/pattern-lab/config/config.yml
+++ b/apps/pattern-lab/config/config.yml
@@ -22,7 +22,7 @@ patternStates:
     - complete
 styleGuideExcludes: ''
 cacheBusterOn: 'true'
-publicDir: www
+publicDir: ../../www/pattern-lab/
 sourceDir: src
 defaultPattern: pages-bolt-homepage
 defaultShowPatternInfo: false
@@ -71,4 +71,4 @@ extensions:
 plugins:
   twigNamespaces:
     enabled: true
-    readFromFile: www/build/data/twig-namespaces.bolt.json
+    readFromFile: ../../www/pattern-lab/build/data/twig-namespaces.bolt.json
