change bolt site name in pkg

--- a/apps/bolt-site/package.json
+++ b/apps/bolt-site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/website--storefront",
+  "name": "@bolt/website",
   "version": "0.5.3",
   "private": true,
   "license": "MIT",
