--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
     - graphicsmagick
 
 before_install:
+- go get github.com/netlify/netlifyctl
 - nvm install # version lifted from `.nvmrc`
 # yarn install
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
