--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ addons:
     - graphicsmagick
 
 before_install:
-- curl -sL -o ~/bin/gimme https://raw.githubusercontent.com/travis-ci/gimme/master/gimme && chmod +x ~/bin/gimme
-- gimme stable # installs `go`
-- go get github.com/netlify/netlifyctl
+- curl -L https://github.com/netlify/netlifyctl/releases/download/v0.3.2/netlifyctl-linux-amd64-0.3.2.tar.gz | tar zx
+- ./netlifyctl --help
 - nvm install # version lifted from `.nvmrc`
 # yarn install
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
