Docs - Home component inventory chip list and site tweaks

--- a/apps/bolt-site--storefront/package.json
+++ b/apps/bolt-site--storefront/package.json
@@ -26,9 +26,13 @@
     "@bolt/global": "0.5.0",
     "@bolt/components-band": "0.6.0-beta.5",
     "@bolt/components-link": "0.2.1",
+    "@bolt/components-logo": "0.3.0-beta.5",
+    "@bolt/components-blockquote": "0.2.4",
     "@bolt/components-button": "0.7.0-beta.5",
     "@bolt/components-button-group": "0.2.0",
     "@bolt/components-card": "0.6.0-beta.5",
+    "@bolt/components-chip": "0.2.0",
+    "@bolt/components-chip-list": "0.2.0",
     "@bolt/components-icon": "0.4.0-beta.5",
     "@bolt/components-headline": "0.7.0-beta.2",
     "@bolt/components-teaser": "0.2.0",
